--- a/MODULO_1/UNIDAD_1_HTML_CSS/CSS/006_Position_Absolute/styles.css
+++ b/MODULO_1/UNIDAD_1_HTML_CSS/CSS/006_Position_Absolute/styles.css
@@ -1,56 +1,73 @@
-#contendor {
+body {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+}
+
+#contenedor {
     position: absolute;
     height: 400px;
     width: 350px;
+    border: 2px solid black;
 }
 
 .tejado {
     position: absolute;
-    height: 50px;
+    height: 13%;
     width: 100%;
-    top: 80px;
-	background-color: rgb(255, 0, 0);
-	z-index: 1;
+    top: 20%;
+    background-color: rgb(255, 0, 0);
+    z-index: 1;
     border: 2px solid black;
+    box-sizing: border-box;
 }
 
 .casa {
     position: absolute;
     height: 80%;
     width: 75%;
-    top: 80px;
-    left: 40px;
+    top: 20%;
+    left: 12%;
     background-color: darkgray;
     border: 2px solid black;
+    box-sizing: border-box;
 }
 
 .puerta {
     position: absolute;
-    height: 80px;
-    width: 70px;
+    height: 20%;
+    width: 20%;
     background-color: cadetblue;
-    top: 320px;
-    left: 130px;
+    top: 80%;
+    left: 40%;
     border: 2px solid black;
+    box-sizing: border-box;
 }
 
 .ventana {
     position: absolute;
-    height: 50px;
-    width: 50px;
+    height: 13%;
+    width: 13%;
     background-color: rgb(95, 160, 120);
-    top: 280px;
-    left: 220px;
+    top: 70%;
+    left: 66%;
     border: 2px solid black;
+    box-sizing: border-box;
 }
 
 .ventana2 {
     position: absolute;
-    height: 60px;
-    width: 60px;
+    height: 15%;
+    width: 15%;
     background-color: rgb(145, 95, 160);
-    top: 170px;
-    left: 60px;
+    top: 40%;
+    left: 20%;
     border-radius: 50%;
     border: 2px solid black;
+    box-sizing: border-box;
 }
