--- a/MODULO_1/UNIDAD_1_HTML_CSS/CSS/Prueba_Evaluable_HTML_CSS/styles.css
+++ b/MODULO_1/UNIDAD_1_HTML_CSS/CSS/Prueba_Evaluable_HTML_CSS/styles.css
@@ -77,6 +77,8 @@ h2 {
     gap: 20px;
     padding: 20px;
     box-sizing: border-box;
+    align-items: center;
+    justify-content: center;
 }
 
 .container {
