--- a/MODULO_2/PHP/004_Ejercicio/styles.css
+++ b/MODULO_2/PHP/004_Ejercicio/styles.css
@@ -4,6 +4,9 @@ body {
     color: #f5f5f5;
     margin: 0;
     padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 h1 {
