--- a/MODULO_2/PHP/005_Ejercicio_2/styles.css
+++ b/MODULO_2/PHP/005_Ejercicio_2/styles.css
@@ -31,7 +31,7 @@ label {
 }
 
 input[type="number"] {
-    width: 100%;
+    width: 90%;
     padding: 10px;
     border: 1px solid #444;
     border-radius: 8px;
@@ -39,4 +39,23 @@ input[type="number"] {
     color: #f5f5f5;
     font-size: 16px;
     margin-bottom: 20px;
+}
+
+p {
+    color: #e0e0e0;
+    margin-bottom: 10px;
+}
+
+button {
+    background-color: #7861fb;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 8px;
+    margin-top: 20px;
+    cursor: pointer;
 }
