--- a/MODULO_2/PHP/005_Ejercicio_2/styles.css
+++ b/MODULO_2/PHP/005_Ejercicio_2/styles.css
@@ -46,7 +46,7 @@ p {
     margin-bottom: 10px;
 }
 
-button {
+button [type="submit"] {
     background-color: #7861fb;
     border: none;
     color: white;
