--- a/MODULO_2/PHP/015_Ejercicio_12/styles.css
+++ b/MODULO_2/PHP/015_Ejercicio_12/styles.css
@@ -14,6 +14,9 @@ body {
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 input[type="text"] {
