--- a/MODULO_2/PHP/016_Ejercicio_13/styles.css
+++ b/MODULO_2/PHP/016_Ejercicio_13/styles.css
@@ -14,6 +14,9 @@ body {
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 h1 {
