--- a/MODULO_2/PHP/017_Ejercicio_14/styles.css
+++ b/MODULO_2/PHP/017_Ejercicio_14/styles.css
@@ -5,6 +5,7 @@ body {
     padding: 20px;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .container {
@@ -12,7 +13,7 @@ body {
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    max-width: 600px;
+    max-width: 700px;
     width: 100%;
 }
 
