--- a/MODULO_2/PHP/017_Ejercicio_14/styles.css
+++ b/MODULO_2/PHP/017_Ejercicio_14/styles.css
@@ -15,6 +15,9 @@ body {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     max-width: 700px;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 h1 {
