--- a/MODULO_2/PHP/020_Ejercicio_17/styles.css
+++ b/MODULO_2/PHP/020_Ejercicio_17/styles.css
@@ -14,7 +14,7 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-h1 {
+h1, h2 {
     text-align: center;
     margin-bottom: 20px;
 }
@@ -28,12 +28,27 @@ label {
     margin-bottom: 5px;
 }
 
-input, select {
+input[type="text"], input[type="number"], select {
     width: 100%;
     padding: 8px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
+}
+
+input[type="checkbox"] {
+    margin-right: 10px;
+    transform: scale(1.2);
+}
+
+input[type="checkbox"]:checked {
+    accent-color: #4CAF50; 
+}
+
+.checkbox-group label {
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
 }
 
 button {
@@ -49,4 +64,23 @@ button {
 
 button:hover {
     background-color: #45a049;
+}
+
+.results-container {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    max-width: 600px;
+    margin: auto;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-top: 20px;
+}
+
+.results-container p, .results-container h1, .results-container h2 {
+    margin-bottom: 15px;
+}
+
+ul {
+    list-style-type: disc;
+    padding-left: 20px;
 }
