--- a/MODULO_2/PHP/020_Ejercicio_17/styles.css
+++ b/MODULO_2/PHP/020_Ejercicio_17/styles.css
@@ -25,7 +25,7 @@ h1, h2 {
     margin-bottom: 20px;
 }
 
-.form-group {
+.form-group, .checkbox-group {
     margin-bottom: 15px;
 }
 
@@ -66,6 +66,7 @@ button {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    transition: background-color 0.3s;
 }
 
 button:hover {
