--- a/MODULO_2/PHP/020_Ejercicio_17/styles.css
+++ b/MODULO_2/PHP/020_Ejercicio_17/styles.css
@@ -6,7 +6,7 @@ body {
     color: #333;
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     min-height: 100vh;
 }
 
