more styles added

--- a/MODULO_2/PHP/031_Ejercicio_26/styles.css
+++ b/MODULO_2/PHP/031_Ejercicio_26/styles.css
@@ -39,11 +39,6 @@ a.btn:hover {
     background: #005abb;
 }
 
-
-button:hover, .btn:hover {
-    background: #005abb;
-}
-
 fieldset {
     border: 1px solid #ddd;
     padding: 15px;
@@ -149,13 +144,18 @@ table th,
 table td {
     padding: 12px 15px;
     text-align: left;
-    border-bottom: 1px solid #ddd;
+    border-right: 1px solid #979797; 
 }
 
 table th {
     background: #007bff;
     color: #fff;
     font-weight: bold;
+}
+
+table td:last-child,
+table th:last-child {
+    border-right: none;
 }
 
 table tr:nth-child(even) {
