--- a/MODULO_2/PHP/031_Ejercicio_26/styles.css
+++ b/MODULO_2/PHP/031_Ejercicio_26/styles.css
@@ -68,7 +68,7 @@ textarea {
     margin-bottom: 15px;
     border-radius: 5px;
     border: 1px solid #ccc;
-    box-sizing: border-box; 
+    box-sizing: border-box;
 }
 
 textarea {
@@ -143,8 +143,9 @@ table {
 table th,
 table td {
     padding: 12px 15px;
-    text-align: left;
-    border-right: 1px solid #979797; 
+    text-align: center;
+    vertical-align: middle;
+    border-right: 1px solid #979797;
 }
 
 table th {
