--- a/MODULO_2/PHP/031_Ejercicio_26/styles.css
+++ b/MODULO_2/PHP/031_Ejercicio_26/styles.css
@@ -181,7 +181,7 @@ table tr:hover {
     margin-bottom: 15px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    width: 100%;
+    max-width: 200px;
 }
 
 .alumno-detalle img {
