--- a/MODULO_2/PHP/031_Ejercicio_26/styles.css
+++ b/MODULO_2/PHP/031_Ejercicio_26/styles.css
@@ -146,6 +146,8 @@ table td {
     text-align: center;
     vertical-align: middle;
     border-right: 1px solid #979797;
+    justify-content: center;
+    align-items: center;
 }
 
 table th {
