--- a/MODULO_2/PHP/031_Ejercicio_26/styles.css
+++ b/MODULO_2/PHP/031_Ejercicio_26/styles.css
@@ -184,6 +184,11 @@ table tr:hover {
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     max-width: 200px;
+    text-align: center;
+}
+
+.actividades-column {
+    text-align: center;
 }
 
 .alumno-detalle img {
