--- a/MODULO_2/PHP/031_Ejercicio_26/styles.css
+++ b/MODULO_2/PHP/031_Ejercicio_26/styles.css
@@ -170,6 +170,9 @@ table td {
     vertical-align: middle;
     border-right: 1px solid #979797;
     box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center
 }
 
 table th {
