--- a/MODULO_2/PHP/032_Ejercicio_27/styles.css
+++ b/MODULO_2/PHP/032_Ejercicio_27/styles.css
@@ -13,7 +13,7 @@ h1 {
     text-align: center;
 }
 
-.enviar {
+input[type="submit"], {
     display: inline-block;
     margin: 10px;
     padding: 10px 20px;
@@ -23,7 +23,7 @@ h1 {
     border-radius: 5px;
 }
 
-.enviar:hover {
+input[type="submit"]:hover {
     background-color: #0056b3;
 }
 
