--- a/MODULO_2/PHP/032_Ejercicio_27/styles.css
+++ b/MODULO_2/PHP/032_Ejercicio_27/styles.css
@@ -13,7 +13,7 @@ h1 {
     text-align: center;
 }
 
-input[type="submit"], {
+input[type="submit"] {
     display: inline-block;
     margin: 10px;
     padding: 10px 20px;
