--- a/MODULO_2/PHP/032_Ejercicio_27/styles.css
+++ b/MODULO_2/PHP/032_Ejercicio_27/styles.css
@@ -151,6 +151,7 @@ textarea {
 /* Contenedor para los detalles del alumno */
 .alumno-detalle {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
     width: 80%;
