--- a/MODULO_2/PHP/032_Ejercicio_27/styles.css
+++ b/MODULO_2/PHP/032_Ejercicio_27/styles.css
@@ -205,7 +205,8 @@ textarea {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    margin-bottom: 20px;
+    margin: 1rem auto;
+    padding: 1rem;
 }
 
 @media (max-width: 768px) {
