--- a/MODULO_2/PHP/034_Ejercicio_28/expedientes/styles.css
+++ b/MODULO_2/PHP/034_Ejercicio_28/expedientes/styles.css
@@ -51,7 +51,7 @@ input[type="password"],
 input[type="file"],
 textarea,
 select {
-    width: calc(100% - 22px);
+    width: 95%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
