--- a/MODULO_2/PHP/034_Ejercicio_28/expedientes/styles.css
+++ b/MODULO_2/PHP/034_Ejercicio_28/expedientes/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 h1 {
-    background-color: #333;
+    background-color: #007BFF;
     color: #fff;
     padding: 20px;
     margin: 0;
@@ -28,16 +28,16 @@ form {
 }
 
 fieldset {
-    border: 1px solid #ddd;
+    border: none;
     border-radius: 8px;
     padding: 15px;
     margin-bottom: 20px;
-    background-color: #f9f9f9;
+    background-color: #fff;
 }
 
 legend {
     font-weight: bold;
-    padding: 0 10px;
+    margin-bottom: 10px;
 }
 
 label {
@@ -47,11 +47,10 @@ label {
 
 input[type="text"],
 input[type="email"],
-input[type="password"],
 input[type="file"],
 textarea,
 select {
-    width: 95%;
+    width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -81,29 +80,76 @@ a:hover {
     background-color: #0056b3;
 }
 
-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin: 20px 0;
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
-table, th, td {
+li {
+    margin-bottom: 20px;
+}
+
+.card {
     border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+    overflow: hidden;
 }
 
-th, td {
-    padding: 12px;
-    text-align: left;
+.card img {
+    max-width: 100px;
+    height: auto;
+    border-radius: 4px;
+    margin-right: 15px;
 }
 
-th {
-    background-color: #f2f2f2;
+.card-content {
+    display: flex;
+    align-items: center;
 }
 
-tr:nth-child(even) {
-    background-color: #f9f9f9;
+.card-content div {
+    flex: 1;
 }
 
+.card-content h3 {
+    margin: 0 0 10px;
+}
+
+.card-content p {
+    margin: 5px 0;
+}
+
+.card-actions {
+    margin-top: 15px;
+}
+
+.card-actions a {
+    display: inline-block;
+    background-color: #007BFF;
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 4px;
+    text-decoration: none;
+    margin-right: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.card-actions a:hover {
+    background-color: #0056b3;
+}
+
+.upload-file-info {
+    margin-top: 10px;
+    font-size: 14px;
+    color: #555;
+}
+
+/* Alert Styles */
 .alert {
     padding: 15px;
     margin: 10px 0;
@@ -119,10 +165,4 @@ tr:nth-child(even) {
 .alert-error {
     background-color: #f8d7da;
     color: #721c24;
-}
-
-.upload-file-info {
-    margin-top: 10px;
-    font-size: 14px;
-    color: #555;
 }
